k8s/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mybank-frontend
  namespace: mybank
spec:
  hosts:
    - "app.mybank.com"
  gateways:
    - mybank-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: frontend
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mybank-api
  namespace: mybank
spec:
  hosts:
    - "api.mybank.com"
  gateways:
    - mybank-gateway
  http:
    - match:
        - uri:
            prefix: "/api/"
      corsPolicy:
        allowOrigins:
          - regex: ".*"
        allowMethods:
          - GET
          - POST
          - PUT
          - PATCH
          - DELETE
          - OPTIONS
        allowHeaders:
          - "*"
        exposeHeaders:
          - "Authorization"
          - "Content-Type"
          - "X-User-Id"
        allowCredentials: true
        maxAge: "3600s"
      route:
        - destination:
            host: api-gateway
            port:
              number: 8080
